samples/_failures_safe/1761608991_2a1259_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37e62b04.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_37e62b04.c:126:5: error: expected declaration or statement at end of input
  126 |     }
      |     ^
